# jims-text-adventure-bevy-yarnspinner

./: Cargo.toml  README.md
_tests/: test_win_as_archer.yarn
assets/dialogue/: game.yarn
assets/dialogue/choose_character/: archer.yarn  mage.yarn  medic.yarn  warrior.yarn
